# referee

./: .gitignore  README.md  place_description.py  place_recognition.py
cpp/: CMakeLists.txt
cpp/include/: features.hpp  radar_utils.hpp  referee.hpp
cpp/src/: features.cpp  main.cpp  radar_utils.cpp  referee.cpp
python/: test.py
python/utils/: feature_extractor.py  referee.py
referee/: 000000.npy  000001.npy  000002.npy
util/: params.py
util/descriptor/: feature_extractor.py  referee.py
util/recognition/: recognition_utils.py  referee.py
utils/: desc_utils.py  eval_utils.py  loop_utils.py  pose_utils.py  radar_utils.py
